# Synthesizer

./: Main.hs  README.md  Synthesizer.cabal
src/: BasicTypes.hs  Envelope.hs  Main.hs  Midi.hs  Note.hs  Oscillator.hs  Play.hs  Samples.hs  Sound.hs  Synth.hs  Util.hs  WaveTable.hs
test/: Test.hs  TestEnvelope.hs  TestMidi.hs  TestNote.hs  TestOscillator.hs  TestSamples.hs  TestSynth.hs  TestUtil.hs  TestWaveTable.hs
