name:                synthesizer
version:             0.1.0.0             
license-file:        LICENSE
author:              Elliott Ding
maintainer:          elliottzding@gmail.com       
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    WaveTable
    ,Envelope
    ,Play
    ,Note
    ,Oscillator
    ,Samples
    ,Synth
  build-depends:
    base >=4.7 && <4.8
    ,bytestring
    ,process
    ,vector
    ,lens
  default-language: Haskell2010
  ghc-options: -Wall

executable synth
  main-is: Main.hs 
  build-depends:
    base >=4.7 && <4.8
    ,synthesizer
    ,lens
    ,containers
    ,vector
    ,directory

test-suite test-synth
  hs-source-dirs: test
  main-is: Test.hs
  type: exitcode-stdio-1.0
  build-depends:
    base >=4.7 && <4.8
   ,synthesizer
   ,hspec
   ,QuickCheck > 2.5
   ,vector
   ,directory
  default-language: Haskell2010
  ghc-options: -Wall
